# ext-wasm

./: .gitignore  .phpunit.result.cache  Cargo.toml  Makefile  README.md  ROADMAP.md  ext-wasm.stubs.php  phpunit.xml
.cargo/: config.toml
.github/actions/setup/: action.yml
.github/workflows/: php-extension-tests.yml
.phive/: phars.xml
examples/: autocompleting-decorator-not-working-yet.php  autocompleting-proxy.php  example.php  failure1.php  failure2.php  failure3.php  function-failure1.php  function-failure2.php  function-failure3.php  function-multiple_arguments.php  function.php  global-failure1.php  global.php  imports.php  wasm-failure1.php
src/: exceptions.rs  interfaces.rs  lib.rs  macros.rs
src/components/: mod.rs
src/components/engines/: interfaces.rs  mod.rs
src/components/engines/implementations/: mod.rs  universal.rs
src/types/: value.rs
tests/: FunctionTest.php  GlobalTest.php  ImportsTest.php  InstanceTest.php
