[package]
name = "ext-wasm"
version = "0.1.0"
edition = "2021"
authors = ["Toon Verwerft <toonverwerft@gmail.com>"]
description = "A WASM extension for PHP"
readme = "README.md"
keywords = ["php", "extension", "webassembly"]
categories = ["wasm"]

[lib]
crate-type = ["cdylib"]

[dependencies]
cargo-php = "0.1.7"
ext-php-rs = "*"
wasmer = { version = "3.1.1", default-features = true, features = ["sys"] }
wasmer-compiler = "3.1.1"

[profile.release]
strip = "debuginfo"
