[package]
name = "ext-wasm"
version = "0.1.0"
edition = "2021"
authors = ["Toon Verwerft <toonverwerft@gmail.com>"]
description = "A WASM extension for PHP"
readme = "README.md"
keywords = ["php", "extension", "webassembly"]
categories = ["wasm"]

[lib]
crate-type = ["cdylib"]

[dependencies]
cargo-php = "0.1.7"
ext-php-rs = "0.11.2"
wasmer = { version = "4.1.0", default-features = true, features = ["sys"] }
wasmer-compiler = "4.1.0"

[profile.release]
strip = "debuginfo"
